# project-human

./: .gitignore  Makefile  README.md  config.json.example  config.json.gui.example  config.json.terminal.example  docker-compose.yaml  flow.py  gui_main.py  llm_component.py  main.py  nodes.py  prompts.py  pyproject.toml  redis_state.py  short_mem_test.py  start.sh  start_system.py  start_webui.sh  stt_component.py  stt_component.py.backup  test_config.py  tts_component.py
src/: gui_main.py  gui_main_video.py  listening_controller.py  llm_component.py  memory_component.py  redis_client.py  redis_state.py  stt_component.py  terminal_main.py  tts_component.py
src/utils/: __init__.py  prompts.py  sqlite_vector.py
src/utils/animation/: __init__.py
src/utils/tools/: __init__.py  finance_tool.py  movies_tool.py  news_tool.py  otaku_tool.py  spotify_tool.py  weather_tool.py
src/webinterface/: app.py
src/webinterface/routers/: services.py  status.py  websocket_router.py
src/webinterface/static/css/: kawaii.css
src/webinterface/static/js/: dashboard.js
src/webinterface/templates/: base.html  dashboard.html
src/webinterface/utils/: service_manager.py
utils/: call_llm.py  vector_index.py
whisper.cpp/models/coreml-encoder-base.en.mlpackage/: Manifest.json
whisper.cpp/models/coreml-encoder-base.en.mlpackage/Data/com.apple.CoreML/: model.mlmodel
whisper.cpp/models/ggml-base.en-encoder.mlmodelc/: metadata.json  model.mil
