[project]
name = "project-human-redis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "ane-transformers>=0.1.0",
    "apsw>=3.49.2.0",
    "coremltools>=8.3.0",
    "ollama>=0.4.8",
    "onnxruntime>=1.22.0",
    "openai>=1.82.0",
    "openai-whisper>=20240930",
    "pyside6>=6.9.0",
    "redis>=6.1.0",
    "silero-vad>=5.1.2",
    "sounddevice>=0.5.2",
    "sqlite-vec>=0.1.6"
]
