[project]
name = "project-human-redis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.6"
dependencies = [
    "aiohttp>=3.11.18",
    "ane-transformers>=0.1.0",
    "apsw>=3.49.2.0",
    "colorama>=0.4.6",
    "coremltools>=8.3.0",
    "fastapi>=0.115.6",
    "groq>=0.26.0",
    "jinja2>=3.1.4",
    "ollama>=0.4.8",
    "onnxruntime>=1.22.0",
    "openai>=1.82.0",
    "openai-whisper>=20240930",
    "psutil>=6.1.0",
    "pygame>=2.6.1",
    "pyside6>=6.9.0",
    "python-multipart>=0.0.17",
    "redis>=6.1.0",
    "replicate>=1.0.7",
    "requests>=2.31.0",
    "silero-vad>=5.1.2",
    "sounddevice>=0.5.2",
    "sqlite-vec>=0.1.6",
    "tavily-python>=0.7.6",
    "uvicorn>=0.34.0",
    "weaviate-client>=4.14.4",
    "websockets>=14.1",
]
